--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,18 @@
 name: Python test
+
 on:
   push:
+    branches: [main, master, dev]
   pull_request:
+    branches: [main, master, dev]
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - name: Git Checkout
+        uses: actions/checkout@v5
+        
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
